2016-08-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c:Fix compiler warning
	* installcheck/Installcheck/Run.pm: Improvement
	* installcheck/Makefile.am: Add new amcat* script and new test scripts
	* installcheck/amcat-error-end.pl: New script that fail on exit
	* installcheck/amcat-error-no-exec.pl: New script install without
	  execute bit
	* installcheck/amcat-error.pl: New script that fail after 65536 bytes
	* installcheck/amcat.sh: New script that do a cat
	* installcheck/failure-client-custom-compress-end.pl,
	  installcheck/failure-client-custom-compress-no-exec.pl,
	  installcheck/failure-client-custom-compress-not-found.pl,
	  installcheck/failure-client-custom-compress.pl,
	  installcheck/failure-client-encrypt-end.pl,
	  installcheck/failure-client-encrypt-no-exec.pl,
	  installcheck/failure-client-encrypt-not-found.pl,
	  installcheck/failure-client-encrypt.pl,
	  installcheck/failure-server-custom-compress-end.pl,
	  installcheck/failure-server-custom-compress-no-exec.pl,
	  installcheck/failure-server-custom-compress-not-found.pl,
	  installcheck/failure-server-custom-compress.pl,
	  installcheck/failure-server-encrypt-end.pl,
	  installcheck/failure-server-encrypt-no-exec.pl,
	  installcheck/failure-server-encrypt-not-found.pl,
	  installcheck/failure-server-encrypt.pl: New scripts to test various
	  error
	* installcheck/failure-xfer-dest-holding-file-first-close_chunk.pl,
	  installcheck/failure-xfer-dest-holding-file-open-first-header.pl,
	  installcheck/failure-xfer-dest-holding-file-open-second-header.pl,
	  installcheck/failure-xfer-dest-holding-file-second-close_chunk.pl,
	  installcheck/failure-xfer-dest-holding-file-write-first-data.pl,
	  installcheck/failure-xfer-dest-holding-file-write-first-header.pl,
	  installcheck/failure-xfer-dest-holding-file-write-second-data.pl,
	  installcheck/failure-xfer-dest-holding-file-write-second-header.pl,
	  installcheck/failure-xfer-dest-holding-shm-first-close_chunk.pl,