@@ -1,4 +1,7 @@
 2016-08-17  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* installcheck/failure-client-custom-compress-end.pl: Remove 5 tests.
+
+2016-08-17  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* server-src/dumper.c:Fix compiler warning
 	* installcheck/Installcheck/Run.pm: Improvement
 	* installcheck/Makefile.am: Add new amcat* script and new test scripts
